--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,20 +25,20 @@
   </head>
   <body>
     <!-- JavaScript Bundle with Popper -->
-    <script
+    <!-- <script
       src="https://unpkg.com/react@16/umd/react.development.js"
       crossorigin
     ></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
-    <script src="js/app.js" type="text/babel"></script>
+    <script src="js/App.js" type="text/babel"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"
     integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ"
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
     <div id="root"></div>
   </body>
 </html>
